# attribute-prediction

./: .dockerignore  Dockerfile  Makefile  README.md  coverage.xml  environment.yaml  pyproject.toml  requirements.txt  requirements_all.txt  sonar-project.properties
.github/workflows/: dependency-review.yml  main.yml
notebooks/: create_dataset.ipynb  inference.ipynb  pipeline.ipynb  train.ipynb  visualize_dataset.ipynb
src/: create_castors.py  create_dataset.py
src/dataloader/: data_loader.py
src/model/: net.py
src/trainer/: evaluate.py  train.py
src/utils/: utils.py  vis_utils.py
tests/: test_metrics.py
