[project]
name = "product-attributes"
version = "0.0.1"
authors = [
  { name="Karan Rampal", email="karan.rampal@hm.com" },
]
description = "A project for predicting attributes of products given the images"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "build",
    "pyyaml",
    "gcsfs",
    "matplotlib",
    "numpy",
    "scikit-learn",
    "pandas",
    "torch",
    "torchvision",
    "tensorboard",
    "google-cloud-aiplatform",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/hm-group/product-attributes"
"Bug Tracker" = "https://github.com/hm-group/product-attributes/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disable_error_code = ["attr-defined", "call-arg"]

[tool.pylint."MASTER"]
ignore = [".ipynb_checkpoints"]

[tool.pylint."TYPECHECK"]
generated-members = ["torch"]

[tool.pylint."DESIGN"]
max-locals = 22
max-args = 7

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
